@@ -48,6 +48,7 @@ Version 1.3
  - Updated Z-Wave.Me device list thanks to Willem (Alex)
  - Fixed Issue 431 - Update Fibaro fgrgbwm441 config thanks to Piotr (Alex)
  - Fixed Issue 433 - Update Fibaro fgwpe config thanks to Piotr (Alex)
+ - Fixed Issue 439 - Update Fibaro FGMS001 config thanks to Jug (Alex)
 
 Version 1.2 
  - Released on 15/10/14
